tests/gabc-dump/should-fail/bad-liquescence.gabc
name: bad liquescence;
%%
(c4) (;<)
